adding missing fields

--- a/index.html
+++ b/index.html
@@ -54,19 +54,7 @@
       <div></div>
     </article>
   </section>
-  <header>
-    <section id="logo">
-      <article>
-        <img src="img/logo-220x220.jpg" alt="City of Detroit">
-      </article>
-    </section>
-    <section class="filter">
-      <article>
-        <h1>LITCH MAP</h1>
-      </article>
-    </section>
-  </header>
-  <main class="hidden">
+  <section class="application hidden">
     <section class="data-panel">
       <button id="close-panel-btn">x</button>
       <section class="content-section"></section>
@@ -75,7 +63,7 @@
       <article id="map"></article>
       <article id="geocoder"></article>
     </section>
-  </main>
+  </section>
   <script src="index.js"></script>
 </body>
 </html>
