fixing loading and rendering issues

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <article id="geocoder"></article>
         <section class="filters">
           <button id="close-filters-btn" class="close-btn"><i class="fas fa-angle-left"></i> Back</button>
-          <h4>Search for housing</h4>
+          <h5>Search for housing</h5>
           <article>
             <button id="zipcode-filter-btn" class="filter-btn">x</button>
             <label for="zipcode">By Zip code:</label>
@@ -106,17 +106,17 @@
             <button id="calculator-btn" class="off" aria-describedby="by-income-description">By Income</button>
             <span id="by-income-description"></span>
           </article>
-          <article>
+          <!-- <article>
             <button class="filter-btn">x</button>
             <button id="filter-reset-btn">Reset</button>
-          </article>
+          </article> -->
           <article class="legend">
             <p><span>x</span> Best match for your income</p>
             <p><span>x</span> May have units affordable for your income</p>
           </article>
         </section>
         <section class="calculator">
-          <h4>Income Calculator</h4>
+          <h5>Income Calculator</h5>
           <article id="calc-box"></article>
         </section>
         <button id="filters">Search for Housing <i class="fas fa-search"></i></button>
