add required fields and extra edits

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </article>
           <article>
             <button id="income-filter-btn" class="filter-btn">x</button>
-            <button id="calculator-btn" class="off" aria-describedby="by-income-description">By Income</button>
+            <button id="calculator-btn" class="off" aria-describedby="by-income-description">Search by Income</button>
             <span id="by-income-description"></span>
           </article>
           <!-- <article>
