Migrating to esri from mapbox.

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
   <title>RENTAL MAP</title>
   <meta name="description" content="Web map to display information about rental propertiesa and enforcement in Detroit.">
   <meta name="author" content="Edgar Montes">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-  <link href="/all.8d9636dd.css" rel="stylesheet">
-<script src="/all.8d9636dd.js"></script><link rel="stylesheet" href="/src.e31bb0bc.css"></head>
+  <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0' />
+  <link href="../local/fontawesome/css/all.css" rel="stylesheet">
+</head>
 <body>
   <style>body{margin: 0; padding: 0;}</style>
   <section id="app">
@@ -32,17 +32,17 @@
       <div class="panel-box"></div>
     </article>
     <article id="map"></article>
-    <div id="legend">
+    <div id='legend'>
       <strong>GARBAGE PICK UP DAY</strong>
-      <nav class="legend clearfix">
-        <span style="background:#194ed7;"></span>
-        <span style="background:#068A24;"></span>
+      <nav class='legend clearfix'>
+        <span style='background:#194ed7;'></span>
+        <span style='background:#068A24;'></span>
         <label>Registered</label>
         <label>Approved</label>
       </nav>
     </div>
   </section>
   
-  <script src="/src.e31bb0bc.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
