Setting up panel.

--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
 
-  <title>RENTAL MAP</title>
-  <meta name="description" content="Web map to display information about rental propertiesa and enforcement in Detroit.">
+  <title>AFFORDABLE HOUSING MAP</title>
+  <meta name="description" content="Application to help find affordable housing in the City of Detroit.">
   <meta name="author" content="Edgar Montes">
   <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0' />
   <link href="../local/fontawesome/css/all.css" rel="stylesheet">
@@ -27,20 +27,10 @@
         </div>
       </article>
     </section>
-    <article id="geocoder"></article>
     <article class="panel">
       <div class="panel-box"></div>
     </article>
     <article id="map"></article>
-    <div id='legend'>
-      <strong>GARBAGE PICK UP DAY</strong>
-      <nav class='legend clearfix'>
-        <span style='background:#194ed7;'></span>
-        <span style='background:#068A24;'></span>
-        <label>Registered</label>
-        <label>Approved</label>
-      </nav>
-    </div>
   </section>
   
   <script src="index.js"></script>
